Fix non-jumpgate render

--- a/entrypoints/content-style.css
+++ b/entrypoints/content-style.css
@@ -1,6 +1,7 @@
 .roll-20-ftg-iframe {
     height: 100vh;
     position: fixed;
+    top: 0;
     z-index: 98;
 }
 
